--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
 	"version": "1.0.0",
 	"description": "BMI Calculator",
 	"main": "server.js",
-	:scripts": {
+	"scripts": {
 		"test": "echo\"Error: no test specification\" && exit 1",
 		"start": "node server.js"
 	},
-	"author": JMaGa
+	"author": "JMaGa",
 	"license": "ISC",
 	"dependencies": {
 		"express": "^4.17.1"
